Added first design elements

--- a/index.html
+++ b/index.html
@@ -59,11 +59,20 @@
             font-style: normal;
         }
     </style>
+    <link rel="stylesheet" href="styles/main-styles.min.css" />
 </head>
 
 <body>
 
-<h1>Hello World</h1>
+    <nav>
+        <h3>Jacob K Lewis</h3>
+        <div class="social-links">
+            <a><img src="assets/images/email.svg"/></a>
+            <a><img src="assets/images/github.svg"/></a>
+            <a><img src="assets/images/twitter.svg"/></a>
+            <a><img src="assets/images/youtube.svg"/></a>
+        </div>
+    </nav>
 
 </body>
 
