Added better layout for responsive images

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
     </nav>
 
-    <div style="height: 150px;"></div>
-    <div class="section" style="background-color: #8D8D8D;">
+    <div style="height: 100px;"></div>
+    <div class="sized-section" style="background-color: #8D8D8D;">
         <p class="lead dark">Developer. Creator. Cook. DIYer. Gamer. Explorer.</p>
     </div>
     <div class="section">
@@ -107,22 +107,37 @@
         <div class="cont flex-lg">
             <div class="fl-auto hide-sm"></div>
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
-                <img src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png"/>
+                <div class="flex">
+                    <div class="fl-auto"></div>
+                    <img style="max-width: 150px;"
+                        src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
+                    <div class="fl-auto"></div>
+                </div>
                 <h4 class="light label">Flour</h2>
             </a>
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
-                <img src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png"/>
+                <div class="flex">
+                    <div class="fl-auto"></div>
+                    <img style="max-width: 150px; margin: 0px auto;"
+                        src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
+                    <div class="fl-auto"></div>
+                </div>
                 <h4 class="light label">Constant K</h2>
             </a>
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
-                <img src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png"/>
+                <div class="flex">
+                    <div class="fl-auto"></div>
+                    <img style="max-width: 150px; margin: 0px auto;"
+                        src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
+                    <div class="fl-auto"></div>
+                </div>
                 <h4 class="light label">Simple Network</h2>
             </a>
             <div class="fl-auto hide-sm"></div>
         </div>
     </div>
     <div class="section">
-    
+        <h3 class="light-header">About Me</h3>
     </div>
 
 </body>
