added photo and finished resume

--- a/index.html
+++ b/index.html
@@ -98,46 +98,116 @@
         </div>
     </nav>
 
-    <div style="height: 100px;"></div>
-    <div class="sized-section" style="background-color: #8D8D8D;">
+    <div style="height: 50px; background-color: #323232;"></div>
+    <div class="sized-section" style="background-color: #323232;">
         <p class="lead dark">Developer. Creator. Cook. DIYer. Gamer. Explorer.</p>
     </div>
     <div class="section">
         <h3 class="light-header">Projects</h3>
         <div class="cont flex-lg">
             <div class="fl-auto hide-sm"></div>
-            <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
+            <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour" style="padding-top: 30px; display: block">
                 <div class="flex">
-                    <div class="fl-auto"></div>
-                    <img style="max-width: 150px;"
+                    <img class="h-center" style="max-width: 150px;"
                         src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
-                    <div class="fl-auto"></div>
                 </div>
                 <h4 class="light label">Flour</h2>
             </a>
-            <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
+            <a class="fl-lg-3" href="https://github.com/jacobklewis/Constantk"
+                style="padding-top: 30px; display: block">
                 <div class="flex">
-                    <div class="fl-auto"></div>
-                    <img style="max-width: 150px; margin: 0px auto;"
-                        src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
-                    <div class="fl-auto"></div>
+                    <img class="h-center" style="max-width: 150px;"
+                        src="https://raw.githubusercontent.com/jacobklewis/Constantk/master/website/constant-k-icon.png" />
                 </div>
                 <h4 class="light label">Constant K</h2>
             </a>
-            <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour">
+            <a class="fl-lg-3" href="https://github.com/jacobklewis/Simple-Network"
+                style="padding-top: 30px; display: block;">
                 <div class="flex">
-                    <div class="fl-auto"></div>
-                    <img style="max-width: 150px; margin: 0px auto;"
-                        src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
-                    <div class="fl-auto"></div>
+                    <img class="h-center" style="max-width: 150px;"
+                        src="https://raw.githubusercontent.com/jacobklewis/Simple-Network/master/website/simple-network-icon.png" />
                 </div>
                 <h4 class="light label">Simple Network</h2>
             </a>
             <div class="fl-auto hide-sm"></div>
         </div>
     </div>
-    <div class="section">
-        <h3 class="light-header">About Me</h3>
+    <div class="section dark" style="background-color: #323232; padding-bottom: 60px;">
+        <h3>About Me</h3>
+        <h4 class="center-text" style="font-weight: 100; margin-top: 30px; padding: 0px;">Jacob K Lewis</h4>
+        <h4 class="center-text" style="margin-top: 5px; padding: 0px">Full Stack Developer</h4>
+        <div class="flex" style="margin-top: 30px;">
+            <img src="assets/images/self-photo.jpg" class="h-center" style="max-width: 200px; border-radius: 35%;" />
+        </div>
+        <div class="cont" style="padding-top: 30px;">
+            <p><b>Here is the Synopsis.</b> I was born and raised in the Chicagoland suburbs in 1994. Since my parents
+                both
+                designed and built my house by themselves, growing up, I always had an interest in building anything.
+                During
+                my early years as a child, I would build with Legos consistently. Later on, I began building software
+                for
+                both desktop and mobile devices alike.
+            </p>
+            <h4 class="l-text">Programming</h4>
+            <p>
+                One Christmas, I received a lego robotics system called Lego Mindstorms. Lego Mindstorms was my
+                introductory
+                to computer programming because it allowed me to program a robot to perform unique actions. Later,
+                around
+                2006, I began to program with Adobe Flash. This animation platform allowed me to create interactive
+                content
+                in an easy-to-understand way. Later, during my high school career, I began writing programs for Android
+                and
+                iPhone.
+            </p>
+            <h4 class="l-text">Interests/Strengths</h4>
+            <p>
+                I am both a Full Stack and Mobile App Developer also independently researching Cryptography and BLE.
+            </p>
+        </div>
+    </div>
+    <div class="section light">
+        <h3>Resume Overview</h3>
+        <div class="cont" style="padding-top: 30px;">
+            <h4 class="l-text">Video Work</h4>
+            <p>
+                Between 2012 and 2017 I freelanced recording videos for both companies and organizations. During the
+                summer of 2011, I had the opportunity to intern at Jellyfish Labs for Phil Vischer (the original creator
+                of Veggie Tales). I helped edit their film, Buck Denver Asks... Why Do We Call It Christmas?
+            </p>
+            <h4 class="l-text">App Work</h4>
+            <p>
+                Over the past three years, I have created and maintained a contact management application for an
+                independent company. The application works on both android and iOS. I have also created a bunch of
+                smaller applications for myself.
+            </p>
+            <h4 class="l-text">Group Work</h4>
+            <p>
+                Early in 2012, I started a group called DigitalFire Media. This group has allowed both my friends and I
+                to work as a group to achieve certain goals. Over the years, we adopted leadership roles that would
+                influence our daily work today.
+            </p>
+            <h4 class="l-text">School</h4>
+            <p>
+                I have an Associate's degree from College of DuPage and a Bachelor's degree in Mathematical Computer
+                Science
+                from the University of Illinois at Chicago.
+            </p>
+
+            <h4 class="l-text">Current/Previous Jobs</h4>
+            <p>
+                I worked at a Sprint store for 3 years in sales and repair. I got the job knowing little to nothing
+                about sales. Over the years, I learned many techniques and practices to not only help me become
+                successful in my later careers but to also help guide my life in this crazy world. I served many
+                different functions at College of DuPage in both the admissions department as well as the student life
+                department. I was a student ambassador for a year giving tours to prospective students and later a front
+                desk employee at the student life office. During the summer of 2015, I interned at PMA Financial in the
+                IT department. PMA offered me the opportunity to support over 100 employees technically, allowing them
+                to work as efficiently as possible each day. I am currently employed at Bosch Tool Corp developing
+                Android and iOS applications.
+            </p>
+        </div>
+
     </div>
 
 </body>
