--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="fl-auto hide-sm"></div>
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Flour" target="_blank" style="padding-top: 30px; display: block">
                 <div class="flex">
-                    <img class="h-center" style="max-width: 150px;"
+                    <img class="h-center" style="max-width: 150px;" width="256" height="256"
                         src="https://raw.githubusercontent.com/jacobklewis/Flour/master/website/flour-icon.png" />
                 </div>
                 <h4 class="light label">Flour</h2>
@@ -116,7 +116,7 @@
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Constantk" target="_blank"
                 style="padding-top: 30px; display: block">
                 <div class="flex">
-                    <img class="h-center" style="max-width: 150px;"
+                    <img class="h-center" style="max-width: 150px;" width="256" height="256"
                         src="https://raw.githubusercontent.com/jacobklewis/Constantk/master/website/constant-k-icon.png" />
                 </div>
                 <h4 class="light label">Constant K</h2>
@@ -124,7 +124,7 @@
             <a class="fl-lg-3" href="https://github.com/jacobklewis/Simple-Network" target="_blank"
                 style="padding-top: 30px; display: block;">
                 <div class="flex">
-                    <img class="h-center" style="max-width: 150px;"
+                    <img class="h-center" style="max-width: 150px;" width="256" height="256"
                         src="https://raw.githubusercontent.com/jacobklewis/Simple-Network/master/website/simple-network-icon.png" />
                 </div>
                 <h4 class="light label">Simple Network</h2>
