Increase load performance

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#FBFBFB">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://use.typekit.net/osn0asl.js"></script>
+    
     <style type="text/css">
         .tk-raleway {
             font-family: "raleway", sans-serif;
@@ -33,7 +33,6 @@
             font-style: normal;
         }
     </style>
-    <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
     <link rel="icon" type="image/ico" href="favicon.ico?ver=0.11">
 
     <title>Jacob K Lewis</title>
@@ -59,11 +58,13 @@
             font-style: normal;
         }
     </style>
-    <link rel="stylesheet" href="styles/main-styles.min.css" />
     <script src="scripts/main.min.js"></script>
+    <link rel="stylesheet" href="styles/main-styles.min.css?v=1" />
 </head>
 
 <body>
+    <script src="https://use.typekit.net/osn0asl.js"></script>
+    <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
 
     <nav>
         <h3>Jacob K Lewis</h3>
@@ -220,7 +221,6 @@
     <div class="section dark" style="background-color: #323232;">
         <footer class="center-text">&copy; 2020 Jacob K Lewis</footer>
     </div>
-
 </body>
 
 </html>
